fix swagger doc + fix add transactions
