# controllers/transaction/getAllTransactions.js
@@ -2,7 +2,7 @@ const TransactionRepo = require("../../repositories/transaction");
 
 const getAllTransactions = async (__, res) => {
   const transactions = await TransactionRepo.getAllTransactions();
-  return res.OK({...transactions});
+  return res.OK({transactions});
 };
 
 module.exports = getAllTransactions;
